<resources>
    <string name="action_settings">Settings</string>
    <string name="msg_data_synchronization_upload_fail_un_userlogin">需要登录,才能同步数据.</string>
    <string name="app_name">家庭医生签约服务系统</string>
    <string name="msg_data_null">没有填写</string>
    <string name="title_jyjcjg">检验检查结果</string>
    <string name="title_jlfa">治疗方案</string>
    <string name="company">北京中卫普华健康科技有限公司</string>
    <string name="msg_lis_instr_reg_null">没有找到对应的检查仪器</string>
    <string name="msg_data_synchronization_fail_time_out">数据同步没有成功,通信超时.</string>
    <string name="copyright">Copyright © 2018</string>
    <string name="label_to_visit_date">随访日期</string>
    <string name="label_to_visit_date_next">下次随访</string>
    <string name="label_search_archives">查档案</string>
    <string name="msg_data_synchronization_upload_success">数据上传同步完成.</string>
    <string name="msg_loading_synchronization_download">正在从服务端更新数据…</string>
    <string name="ep_info_ahistory">过敏史</string>
    <string name="ep_info_attackdate">发病时间</string>
    <string name="ep_info_cc">主诉</string>
    <string name="ep_info_diagnose">诊断</string>
    <string name="ep_info_phistory">既往史</string>
    <string name="ep_info_symptom">症状</string>
    <string name="ep_info_wj">未结金额：</string>
    <string name="ep_info_yj">已结金额：</string>
    <string name="ep_info_zj">合计：</string>
    <string name="ep_recipelist_itemcount">数量</string>
    <string name="ep_recipelist_itemcountunit">单位</string>
    <string name="ep_recipelist_itemday">用药天数</string>
    <string name="ep_recipelist_itemdose">每次剂量</string>
    <string name="ep_recipelist_itemfrequency">用药频率</string>
    <string name="ep_recipelist_itemmoney">金额</string>
    <string name="ep_recipelist_itemname">药品名称</string>
    <string name="ep_recipelist_itemposition">手术部位</string>
    <string name="ep_recipelist_itemprice">单价</string>
    <string name="ep_recipelist_itemspec">规格</string>
    <string name="ep_recipelist_itemway">用药途径</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_0_7_child">0~7岁儿童</string>
    <string name="label_abdomen">腹部</string>
    <string name="label_abnormal">异常</string>
    <string name="label_account">登录账号</string>
    <string name="label_add">新增</string>
    <string name="label_address">地址</string>
    <string name="label_again">再新增</string>
    <string name="label_age">年龄</string>
    <string name="label_all">全部</string>
    <string name="label_all_list">全部记录</string>
    <string name="label_archives_new">建档</string>
    <string name="label_area">行政区划</string>
    <string name="label_attachment">附件</string>
    <string name="label_bah">病案号</string>
    <string name="label_barrelChest">桶状胸</string>
    <string name="label_bc">B 超*</string>
    <string name="label_bdb">白蛋白</string>
    <string name="label_bfw">不服药</string>
    <string name="label_birthday">出生年月</string>
    <string name="label_birthday_colon">出生年月:</string>
    <string name="label_bk">包块</string>
    <string name="label_bljl">病历记录</string>
    <string name="label_qy">签约</string>
    <string name="label_blood_type">血型</string>
    <string name="label_bmi">体质指数（BMI）</string>
    <string name="label_bmiUnit">kg/㎡</string>
    <string name="label_bnz">白内障</string>
    <string name="label_bodyTemperature">体温</string>
    <string name="label_breathSounds">呼吸音</string>
    <string name="label_brothers">兄弟姐妹</string>
    <string name="label_businessHours">从业时间</string>
    <string name="label_bx">不详</string>
    <string name="label_bxb">白细胞</string>
    <string name="label_cancel">取消</string>
    <string name="label_ccrq">撤床日期</string>
    <string name="label_celsius">℃</string>
    <string name="label_cervix">宫颈</string>
    <string name="label_channel">通道号</string>
    <string name="label_children">子女</string>
    <string name="label_cjqk">残疾情况</string>
    <string name="label_cjwhmc">村(居)委会名称</string>
    <string name="label_cl1">材料</string>
    <string name="label_colon">:</string>
    <string name="label_confrim">提交</string>
    <string name="label_contract">联系人姓名</string>
    <string name="label_contract_phone">联系人电话</string>
    <string name="label_contract_phone1">联系电话</string>
    <string name="label_cqdmdzdbggc">血清低密度脂蛋白胆固醇</string>
    <string name="label_createArchives">建档填表</string>
    <string name="label_crkmx">出入库明细</string>
    <string name="label_currAddress">现住址</string>
    <string name="label_cxxxl">充血性心力</string>
    <string name="label_cyrq">出院日期</string>
    <string name="label_data_synchronization_upload">数据同步</string>
    <string name="label_advanced">高级</string>
    <string name="label_dateUnit_year">年</string>
    <string name="label_date_begin">起始日期</string>
    <string name="label_date_end">截至日期</string>
    <string name="label_day">日</string>
    <string name="label_dbqx">大便潜血*</string>
    <string name="label_del">删除</string>
    <string name="label_delete">删除</string>
    <string name="label_diabetes1">糖尿病患者</string>
    <string name="label_dl">锻炼</string>
    <string name="label_dmbsxjb">动脉闭塞性疾病</string>
    <string name="label_doctor_name">医生姓名</string>
    <string name="label_drinking_water">饮水</string>
    <string name="label_dzxnqx">短暂性脑缺血</string>
    <string name="label_email">电子邮件</string>
    <string name="label_examDate">体检日期</string>
    <string name="label_exit">退出</string>
    <string name="label_exposure_history">暴露史</string>
    <string name="label_extract_birth">获取出生年月</string>
    <string name="label_family_null">没有家庭成员</string>
    <string name="label_father">父亲</string>
    <string name="label_fc">粉尘</string>
    <string name="label_fhcs">防护措施</string>
    <string name="label_fmyghyfjzs">非免疫规划预防接种史</string>
    <string name="label_forget_pwd">忘记密码？</string>
    <string name="label_fswz">放射物质</string>
    <string name="label_fuel_type">燃料类型</string>
    <string name="label_fyycx">服药依从性</string>
    <string name="label_fzjcggnbdb">白蛋白</string>
    <string name="label_fzjcggnjhdhs">结合胆红素</string>
    <string name="label_fzjcggnxqgbzam">血清谷丙转氨酶</string>
    <string name="label_fzjcggnxqgczam">血清谷草转氨酶</string>
    <string name="label_fzjcggnzdhs">总胆红素</string>
    <string name="label_fzjcncgndb">尿蛋白</string>
    <string name="label_fzjcncgnqx">尿潜血</string>
    <string name="label_fzjcncgnt">尿糖</string>
    <string name="label_fzjcncgntt">尿酮体</string>
    <string name="label_fzjcncgqt">其它</string>
    <string name="label_fzjcsgnxndd">血尿素氮</string>
    <string name="label_fzjcsgnxqjg">血清肌酐</string>
    <string name="label_fzjcxcgbxbjsz">白细胞计数值</string>
    <string name="label_fzjcxcgqt">其他</string>
    <string name="label_fzjcxcgxhdbz">血红蛋白值</string>
    <string name="label_fzjcxcgxxbjsz">血小板计数值</string>
    <string name="label_fzjcydfmwydqjd">阴道清洁度</string>
    <string name="label_fzzd">辅助诊断</string>
    <string name="label_gd">肝大</string>
    <string name="label_ggn">肝功能*</string>
    <string name="label_ggwsfw">公共卫生服务</string>
    <string name="label_gjtp">宫颈涂片*</string>
    <string name="label_gl">规律</string>
    <string name="label_gly">干罗音</string>
    <string name="label_gm">巩膜</string>
    <string name="label_gmzz">肛门指诊</string>
    <string name="label_gynecological">妇科*</string>
    <string name="label_gysz">甘油三酯</string>
    <string name="label_gzdmxycj">冠状动脉血运重建</string>
    <string name="label_has">有</string>
    <string name="label_hasNot">无</string>
    <string name="label_health_case">饮食营养</string>
    <string name="label_heart">心脏</string>
    <string name="label_heartRate">心率</string>
    <string name="label_heartRate2">目标心率</string>
    <string name="label_history_of_drug_allergy">药物过敏史</string>
    <string name="label_hjAddress">户籍地址</string>
    <string name="label_household_registration">户籍</string>
    <string name="label_household_registration_not">非户籍</string>
    <string name="label_hxpl">呼吸频率</string>
    <string name="label_hxwz">化学物质</string>
    <string name="label_hypertension">高血压患者</string>
    <string name="label_instdate">安装日期</string>
    <string name="label_inster">安装人</string>
    <string name="label_instrument_register">仪器登记</string>
    <string name="label_instr_prj">项目</string>
    <string name="label_item_code">项目代码</string>
    <string name="label_item_name">项目名称</string>
    <string name="label_jb">疾病</string>
    <string name="label_jbmc">疾病名称</string>
    <string name="label_jbs">基本是</string>
    <string name="label_jcdml">夹层动脉瘤</string>
    <string name="label_jcrq">建床日期</string>
    <string name="label_jcylgl">基础医疗管理</string>
    <string name="label_jd">间断</string>
    <string name="label_jddw">建档单位</string>
    <string name="label_jdr">建档人</string>
    <string name="label_jdrq">建档日期</string>
    <string name="label_jdsj">建档时间</string>
    <string name="label_jhctj">进耗存统计</string>
    <string name="label_jhdhs">结合胆红素</string>
    <string name="label_jiany">建议</string>
    <string name="label_jkdah">健康档案号</string>
    <string name="label_jkdah1">档案号</string>
    <string name="label_jkjy">教育培训</string>
    <string name="label_jkpj">健康评价</string>
    <string name="label_jkyj">健康饮酒</string>
    <string name="label_jkzd">健康指导</string>
    <string name="label_job">职业</string>
    <string name="label_jobs">工种</string>
    <string name="label_jtbcs">家庭病床史</string>
    <string name="label_jtz">减体重</string>
    <string name="label_jwsjbexzl">恶性肿瘤</string>
    <string name="label_jwsjbzyb">职业病</string>
    <string name="label_jwsjbqt">其他</string>
    <string name="label_jwsssmc1">名称1</string>
    <string name="label_jwsssmc2">名称2</string>
    <string name="label_jwssssj1">时间1</string>
    <string name="label_jwssssj2">时间2</string>
    <string name="label_jwssxsj1">时间1</string>
    <string name="label_jwssxsj2">时间2</string>
    <string name="label_jwssxyy1">原因1</string>
    <string name="label_jwssxyy2">原因2</string>
    <string name="label_jwswsmc1">名称1</string>
    <string name="label_jwswsmc2">名称2</string>
    <string name="label_jwswssj1">时间1</string>
    <string name="label_jwswssj2">时间2</string>
    <string name="label_jxsy">急性肾炎</string>
    <string name="label_jy">戒烟</string>
    <string name="label_jyfc">建议复查</string>
    <string name="label_jyjc">检验检查</string>
    <string name="label_jyjzym">建议接种疫苗</string>
    <string name="label_jyzz">建议转诊</string>
    <string name="label_jzjg">接种机构</string>
    <string name="label_jzrq">接种日期</string>
    <string name="label_jzs">家族史</string>
    <string name="label_kfxt">空腹血糖*</string>
    <string name="label_kq">口腔</string>
    <string name="label_lbj">淋巴结</string>
    <string name="label_lengthUnit">cm</string>
    <string name="label_level_of_education">文化程度</string>
    <string name="label_list">列表</string>
    <string name="label_livestock_bar">禽畜栏</string>
    <string name="label_lnrjkztzwpg">老年人健康状态自我评估*</string>
    <string name="label_lnrqgzt">老年人情感状态*</string>
    <string name="label_lnrrzgn">老年人认知功能*</string>
    <string name="label_lnrshzlnlzwpg">老年人生活自理能力自我评估*</string>
    <string name="label_login">登录</string>
    <string name="label_login_account">账户：</string>
    <string name="label_server">服务器：</string>
    <string name="label_login_pwd">密码：</string>
    <string name="label_lung">肺</string>
    <string name="label_man">男</string>
    <string name="label_marital_status">婚姻状况</string>
    <string name="label_mb">目标</string>
    <string name="label_mc">名称</string>
    <string name="label_medical_institutions">医疗机构名称</string>
    <string name="label_qq_login">QQ登录</string>
    <string name="label_save">保存</string>
    <string name="label_wjyc">未见异常</string>
    <string name="label_yuanyin">原因</string>
    <string name="msg_hint_account_input">请输入用户账号</string>
    <string name="msg_select_please">请选择</string>
    <string name="label_jgjks">机构及科室</string>
    <string name="label_xcsfrq">下次随访日期</string>
    <string name="label_sfysqm">随访医生签名</string>
    <string name="title_ztpg">总体评估</string>
    <string name="label_bjzd">保健指导</string>
    <string name="label_zhuanz">转诊</string>
</resources>